--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,25 @@
-.App {
-  text-align: center;
+.button-group {
+  margin-top: 150px;
+  width: 25%;
+  left: 5%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.button-group button {
+  background-color: rgb(116, 116, 116);
+  border: 1px solid rgb(65, 65, 65);
   color: white;
+  font-size: 20px;
+  padding: 15px;
+  width: 100%;
+  cursor: pointer; /* Pointer/hand icon */
+  border-radius: 2px;
 }
 
-.App-link {
-  color: #61dafb;
+.button-group button:not(:last-child) {
+  border-bottom: none; /* Prevent double borders */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* Add a background color on hover */
+.button-group button:hover {
+  background-color: gray;
 }
